# rateguard-be

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
crates/control-plane/: Cargo.toml
crates/control-plane/src/: app.rs  config.rs  lib.rs  main.rs  routes.rs
crates/control-plane/src/db/: api_keys.rs  mod.rs  pool.rs  tiers.rs
crates/control-plane/src/handlers/: api_keys.rs  internal.rs  mod.rs  stats.rs  tiers.rs
crates/control-plane/src/services/: api_key_service.rs  mod.rs  tier_service.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs
crates/core/src/config/: rate_limit.rs
crates/core/src/models/: api_key.rs  mod.rs  tier.rs
crates/data-plane/: Cargo.toml
crates/data-plane/src/: app.rs  config.rs  lib.rs  main.rs  types.rs
crates/data-plane/src/cache/: config_store.rs  mod.rs
crates/data-plane/src/client/: control_plane.rs
crates/data-plane/src/limiter/: redis.rs
crates/data-plane/src/middleware/: rate_limit.rs
crates/data-plane/src/polling/: refresher.rs
crates/data-plane/src/stats/: collector.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/tests/: rate_limit_test.rs
infra/: docker-compose.yml
infra/migrations/: 001_create_users.sql  002_create_tiers.sql  003_create_api_keys.sql  004_add_route_overrides_to_tiers.sql
scripts/: test_requests.sh
