[package]
name = "rateguard-control-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
rateguard-core = { path = "../core" }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid", "macros", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenvy = "0.15"
envy = "0.4"
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
