[package]
name = "rateguard-data-plane"
version = "0.1.0"
edition = "2021"

[dependencies]
rateguard-core = { path = "../core" }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
redis = { version = "0.27", features = ["tokio-comp", "tokio-native-tls"] }
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
