[package]
name = "rateguard-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
rateguard-core = { path = "../core" }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "uuid"] }
uuid = { version = "1.6", features = ["v4"] }
dotenvy = "0.15"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
